# rotating-chess

./: .env.dev  .gitignore  BUILD.md  Makefile  README.md  TEMPHELPDOC.txt  compressjson.py  debug.py  game.py  gamestate.py  main.py  main.spec  math_util.py  moveselector.py  pieces.py  pygbag.tmpl  pyproject.toml  settings.py  test_all.py  widgets.py
dist_assets/example_game/: README.md
dist_assets/example_game_2/: README.md
docs/: index.html  rotating-chess.apk  rotatingchess.apk  src.apk
src/: main.py
src/rotating_chess/: compressjson.py  debug.py  gamestate.py  locations.py  main.py  pieces.py  settings.py  widgets.py
tests/: test_all.py
