[project]
name = "rotating-chess"
version = "0.1.0"
description = "A very normal game of chess."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.15.0",
    "pygame-ce>=2.5.3",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
