[project]
name = "rotating-chess"
version = "0.1.0"
description = "A very normal game of chess."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copykitten>=1.2.2",
    "mypy>=1.15.0",
    "pygame-ce>=2.5.3",
    "pygbag>=0.9.2",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
doctest_optionflags = "NUMBER ELLIPSIS"
    # NUMBER: round floats
    # ELLIPSIS: allow ... to shorten outputs in non-exception output

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
